Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="AiChaos.GitHub.io : AiChaos GitHub website.">
+    <meta name="description" content="AiChaos : Chatbots and chatbot accessories.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>AiChaos.GitHub.io</title>
+    <title>AiChaos</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/aichaos">View on GitHub</a>
 
-          <h1 id="project_title">AiChaos.GitHub.io</h1>
-          <h2 id="project_tagline">AiChaos GitHub website.</h2>
+          <h1 id="project_title">AiChaos</h1>
+          <h2 id="project_tagline">Chatbots and chatbot accessories.</h2>
 
         </header>
     </div>
